# aiotrade

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aiobybit/: __init__.py  cache.py  client.py  http.py  protocols.py  session.py  types.py
aiobybit/mixins/: __init__.py  account.py  market.py  position.py  trade.py
aiotrade/: __init__.py  _errors.py  _http.py  _protocols.py  _session.py  _types.py  utils.py
aiotrade/caches/: __init__.py  _base.py  _bingx.py  _bitget.py  _bybit.py  _gate.py  _kucoin.py  _okx.py  binance.py  bingx.py  bybit.py
aiotrade/clients/: __init__.py  _utils.py
aiotrade/clients/binance/: __init__.py  _helpers.py  _http.py  _url_resolver.py
aiotrade/clients/binance/_mixins/: __init__.py
aiotrade/clients/binance/_mixins/_derivatives/: __init__.py
aiotrade/clients/binance/_mixins/_derivatives/_usdm_futures/: __init__.py  _account.py  _market.py  _trade.py
aiotrade/clients/binance/_mixins/_spot/: __init__.py  _account.py  _general.py  _trade.py
aiotrade/clients/binance/_mixins/_wallet/: __init__.py  _account.py
aiotrade/clients/bingx/: __init__.py  _helpers.py  _http.py
aiotrade/clients/bingx/_mixins/: __init__.py  _common.py
aiotrade/clients/bingx/_mixins/_account/: __init__.py  _fund.py  _sub.py  _wallet.py
aiotrade/clients/bingx/_mixins/_copy/: __init__.py  _perpetual.py  _spot.py
aiotrade/clients/bingx/_mixins/_mfutures/: __init__.py  _market.py  _trade.py
aiotrade/clients/bingx/_mixins/_spot/: __init__.py  _account.py  _market.py  _trade.py  _wallet.py
aiotrade/clients/bingx/_mixins/_swap/: __init__.py  _account.py  _market.py  _trade.py
aiotrade/clients/bitget/: __init__.py  _broker.py  _helpers.py  _http.py
aiotrade/clients/bitget/_mixins/: __init__.py  _public.py
aiotrade/clients/bitget/_mixins/_futures/: __init__.py  _account.py  _market.py  _position.py  _trade.py  _trigger.py
aiotrade/clients/bitget/_mixins/_spot/: __init__.py  _account.py  _market.py  _trade.py
aiotrade/clients/bybit/: __init__.py  _broker.py  _helpers.py  _http.py
aiotrade/clients/bybit/_mixins/: __init__.py  _account.py  _market.py  _position.py  _trade.py  _user.py
aiotrade/clients/gate/: __init__.py  _broker.py  _helpers.py  _http.py
aiotrade/clients/gate/_mixins/: __init__.py  _account.py  _futures.py  _unified.py
aiotrade/clients/kucoin/: __init__.py  _broker.py  _consts.py  _helpers.py  _http.py
aiotrade/clients/kucoin/_mixins/: __init__.py  _account.py
aiotrade/clients/kucoin/_mixins/_futures/: __init__.py  _market.py  _orders.py  _position.py
aiotrade/clients/okx/: __init__.py  _broker.py  _helpers.py  _http.py
aiotrade/clients/okx/_mixins/: __init__.py  _algo_trade.py  _common.py  _funding_account.py  _public.py  _trade.py  _trading_account.py
aiotrade/types/: __init__.py  binance.py  bingx.py  bitget.py  bybit.py  gate.py  kucoin.py  okx.py
aiotrade/unified/: __init__.py  _protocol.py  types.py  utils.py
aiotrade/unified/_clients/: __init__.py  binance.py  bingx.py  bitget.py  bybit.py  gate.py  kucoin.py  okx.py
aiotrade/unified/converters/: __init__.py  pending_order.py  position.py
aiotrade/unified/converters/instruments/: __init__.py  futures.py  spot.py
aiotrade/unified/converters/place/: futures.py  spot.py
aiotrade/utils/: __init__.py  dates.py  errors.py  formatters.py  numbers.py  retry.py
examples/: __init__.py  benchmark.py  get_all_methods.py  get_prices.py  test_binance_auth.py  test_bingx_auth.py  test_bitget_auth.py  test_broker.py  test_broker_clients.py  test_bybit_auth.py  test_cache.py  test_cache_with_session.py  test_client.py  test_get_all_methods.py  test_get_balances.py  test_imports.py  test_market.py  test_multiclient.py  test_okx_auth.py  test_process.py  test_session_manager.py  test_unified_clients.py
examples/test_auth/: test_binance_auth.py  test_bingx_auth.py  test_bybit_auth.py  test_gate_auth.py  test_kucoin_auth.py  test_okx_auth.py
examples/unified/: __init__.py  helpers.py  protocol.py  types.py
examples/unified/clients/: __init__.py  binance.py  bingx.py  bitget.py  bybit.py  kucoin.py  okx.py
tests/: __init__.py  conftest.py  test_auth.py  test_cache.py  test_cache_with_session.py  test_caches.py  test_market.py  test_multiclient.py  test_server_time.py  test_session_manager.py  test_shared_session.py  test_unified_utils.py
