[project]
name = "aiotrade-sdk"
version = "0.1.0"
description = "High-performance async trading API client for Python supporting BingX and Bybit exchanges with intelligent session and cache management"
authors = [
    {name = "Daniil Pavlovich", email = "layred.dota2@mail.ru"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.15"
keywords = [
    "trading",
    "api",
    "async",
    "cryptocurrency",
    "exchange",
    "bingx",
    "bybit",
    "finance",
    "asyncio",
    "aiohttp"
]
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
]

[project.urls]
Homepage = "https://github.com/vispar-tech/aiotrade"
Repository = "https://github.com/vispar-tech/aiotrade"
Documentation = "https://github.com/vispar-tech/aiotrade#readme"
Issues = "https://github.com/vispar-tech/aiotrade/issues"
Changelog = "https://github.com/vispar-tech/aiotrade/blob/main/CHANGELOG.md"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pre-commit = "^4.5.1"
pytest = "^9.0.2"
anyio = "^4.12.1"
ruff = "^0.14.14"


[tool.poetry]
packages = [
    { include = "aiotrade" }
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
pretty = true
show_error_codes = true
implicit_reexport = false
warn_unused_ignores = true
warn_return_any = true
namespace_packages = true
files = ["aiotrade"]

[tool.ruff]
include = ["aiotrade/**/*.py"]
line-length = 88
fix = true
unsafe-fixes = true
exclude = ["debug"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "ANN",
    "S",
    "B",
    "C",
    "ISC",
    "PIE",
    "T",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "PTH",
    "ERA",
    "PLR",
    "RUF",

]
ignore = [
    "ANN401", # Need cause we work with dictionaries
]
fixable = ["ALL"]
unfixable = []
pydocstyle = { convention = "pep257", ignore-decorators = ["typing.overload"] }
isort = { force-single-line = false, known-first-party = ["aiotrade"] }
pylint = { allow-magic-value-types = ["int", "str", "float", "bytes"], max-args = 12 }

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    "T201",
    "ERA001",
    "D"
]
"tests/*" = [
    "S101"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-s",
    "--tb=short",
    "--show-capture=stderr",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "external: marks tests that require external API calls (deselect with '-m \"not external\"')",
]

anyio_mode = "auto"

log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_level = "DEBUG"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_level = "DEBUG"
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
